[package]
name = "snow-treading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui = { git = "https://github.com/emilk/egui", branch = "master" }
confy = "0.4.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
dirs-2 = "3.0.1"