[package]
name = "snow-treading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui = { git = "https://github.com/emilk/egui", branch = "master" }
confy = "0.4.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
dirs-2 = "3.0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
pretty_env_logger = "0.4.0"
hyper = "0.14.17"
rand = "0.8.5"
log = "0.4"
